padding, z-index bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,8 @@ body {
 }
 
 .drag_drop {
-  padding: 4.5rem;
-  width: 100%;
-  height: 100%;
+  padding-top: 4.5rem;
+
   transform-origin: 4% 8%;
 
   transition: all 0.3s ease-in-out;
